Quorum/Library/Tests/TypeChecker/Pass/ExpAssignTextNumber.quorum
class Main
    action Main
        text txt = ""
        txt = cast(text, 7.5)
        if txt = "7.5"
            output "passed"
        end
    end
end