Quorum/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBooleanField.quorum
class main
    Text txt
    action Main
        txt = cast(Text, true)
    end
end